# llmenv

./: .editorconfig  .gitignore  .llmenv-dev  .llmenv.yaml  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG-1.md  CHANGELOG-2.md  CHANGELOG-3.md  CHANGELOG-4.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  THIRD-PARTY-LICENSES.md  about-web.hbs  about.hbs  about.toml  build.rs  codecov.yml  deny.toml  llmenv_DIFFERENTIAL_REVIEW_2026-07-02.md  package-lock.json  package.json  release.toml
.claude/: settings.json
.github/: renovate.json5
.github/workflows/: auto-close-on-release.yml  ci.yml  coverage.yml  docs.yml  forward-merge-release.yml  markdownlint.yml  release.yml
.github/workflows/__tests__/: forward-merge-release-guards.sh
.semgrep-out/: rust-auto.stderr  rust-p-rust.json  rust-pruleset.json  rust-pruleset.sarif  rust-pruleset.stderr  rust-secaudit.json  rust-secaudit.sarif  rust-secaudit.stderr  rust-secrets.json  rust-secrets.sarif  rust-secrets.stderr  rust-security-audit.json
benches/: cli_benchmark.rs
crates/llmenv-config/: Cargo.toml  release.toml
crates/llmenv-config/proptest-regressions/: schema.txt  validate.txt
crates/llmenv-config/src/: lib.rs  schema.rs  template.rs  validate.rs
crates/llmenv-git/: Cargo.toml
crates/llmenv-git/proptest-regressions/: lib.txt
crates/llmenv-git/src/: lib.rs
crates/llmenv-paths/: Cargo.toml  release.toml
crates/llmenv-paths/src/: lib.rs
crates/llmenv-util/: Cargo.toml  release.toml
crates/llmenv-util/proptest-regressions/: lib.txt
crates/llmenv-util/src/: lib.rs
docs/: README.md  commands.md  concepts.md  configuration.md  engines.md  env-vars.md  getting-started.md  homebrew-tap-setup.md  icm-topology.md  licensing.md  maintainers.md  mcp.md  plugins.md  release.md
docs/design/: engine-capabilities.md  hot-path-optimizations.md  icm-memoir-recommendation.md  issue-163-bash-pattern-research.md  issue-231-task-tracker.md  issue-233-codex-adapter.md  issue-270-memory-retention-prune.md  issue-278-content-scope-matching.md  issue-317-slippage-control-bundle.md  issue-318-read-once-hook.md  issue-365-codebase-memory-mcp-feature.md  issue-526-provider-model-schema-types.md  issue-527-provider-model-merge-rules.md  issue-528-provider-model-adapter-rendering.md  issue-529-provider-model-property-tests.md  issue-530-provider-model-docs-changelog.md  issue-555-icm-memoir-audit.md  issue-578-setup-smoke-tests.md  issue-595-consolidation-llm-summarization.md  issue-660-json-schema-generation.md
docs/reference/: 3.0.0-release-triage.md  README.md  config-updates.md
docs/reference/claude-code/: README.md  claude-directory.md  env-vars.md  gap-analysis.md  hooks.md  mcp.md  memory.md  permissions.md  plugins.md  settings.md  skills-and-commands.md  statusline-and-output-styles.md  subagents.md
docs/reference/codex/: README.md  agents-md.md  auth.md  config-toml.md  enterprise.md  env-vars.md  mcp.md  (+7 more)
docs/superpowers/: .markdownlint-cli2.yaml
examples/config-llmenv-dir/: .gitignore  CLAUDE.md  README.md  config.yaml
examples/my-llmenv/: AGENTS.md  README.md  config.yaml
proptest-regressions/: icm.txt  util.txt
proptest-regressions/adapter/: claude_code.txt  skills.txt
proptest-regressions/config/: validate.txt
proptest-regressions/mcp/: proxy.txt
proptest-regressions/merge/: capabilities.txt
proptest-regressions/scope/: matcher.txt
scripts/: core_count.sh  gen-attribution.sh  reflow-markdown.py  roll-changelog.sh  roll-prerelease-changelog.sh  sync-changelog-doc.sh
skills/llmenv/: SKILL.md
skills/setup-llmenv/: SKILL.md
src/: errors.rs  git.rs  icm.rs  lib.rs  main.rs  paths.rs  test_fixtures.rs  util.rs
src/adapter/: claude_code.rs  crush.rs  llmenv_skill.rs  mod.rs  opencode.rs  skills.rs
src/auth/: detect.rs  mod.rs
src/cli/: doctor.rs  mod.rs  mod.rs.bak  setup.rs  status.rs  style.rs  upgrade.rs
src/config/: mod.rs  schema.rs  template.rs  validate.rs
src/consolidation/: mod.rs
src/hook_run/: action.rs  detached_consolidation.rs  detached_store.rs  mcp_client.rs  mod.rs  read_once.rs
src/materialize/: cache.rs  manifest.rs  mod.rs  schema_gen.rs  state.rs  status_data.rs
src/mcp/: mod.rs  proxy.rs  resolve.rs
src/memory/: mod.rs  prune.rs
src/merge/: agents_md.rs  capabilities.rs  mod.rs  rules.rs
src/plugins/: cache.rs  mod.rs  resolve.rs
src/scope/: matcher.rs  mod.rs  network.rs
src/session_log/: detached.rs  dispatch.rs  event.rs  file_sink.rs  mod.rs  reaper.rs  scope_header.rs  state.rs  tracing_layer.rs  transcript.rs
src/sync/: mod.rs
src/task/: mod.rs  project.rs  session.rs
src/throttle/: backend.rs  mod.rs
tests/: check_stale.rs  claude_code_adapter.rs  cli_color_support.rs  cli_no_args_help.rs  config_context.rs  config_parse.rs  config_validate_proptest.proptest-regressions  config_validate_proptest.rs  context_command.rs  docs_sync.rs  doctor_version_skew.rs  engine_capabilities_coverage.proptest-regressions  engine_capabilities_coverage.rs  gateway_parse.rs  hook_run_failsoft.rs  icm_tag_mapping.rs  init_scaffolds_agents_md.rs  materialize.rs  mcp_config.rs  mcp_proxy.rs  merge.rs  merge_proptest.rs  native_passthrough.rs  path_operations_proptest.rs  plugin_cache.rs  plugin_config.rs  prune_command.rs  readme_links.rs  release_metadata.rs  release_reflow_markdown.rs  scope_matcher.rs  scope_matcher_proptest.rs  setup_smoke.rs  shell_hook.rs  smoke_suite.rs  statusline_smoke.rs  sync.rs  task_cli.rs  version_extraction.rs
tests/fixtures/: llmenv.toml  llmenv.yaml
tests/snapshots/: claude_code_adapter__claude_code_layout.snap  claude_code_adapter__two_bundles_merge_into_deterministic_settings_json.snap
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/docs/: changelog.md  commands.md  concepts.md  configuration.md  engines.md  getting-started.md  homebrew-tap-setup.md  licensing.md  maintainers.md  mcp.md  philosophy.md  plugins.md  release.md  third-party-licenses.md  troubleshooting.md
(+179 files in other folders)
