[package]
name = "llmenv"
version = "1.0.9"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Universal scope-aware environment for AI coding agents"
repository = "https://github.com/phaedrus1992/llmenv"
homepage = "https://phaedrus1992.github.io/llmenv/"
documentation = "https://phaedrus1992.github.io/llmenv/"
readme = "README.md"
keywords = ["ai", "agents", "cli", "config", "environment"]
categories = ["command-line-utilities", "development-tools", "config"]
# Keep the published crate lean: the docs site, design docs, CI config, and dev
# scripts are not needed to build or use llmenv. Tests and benches ship so the
# crate stays verifiable from a crates.io checkout.
exclude = ["/website", "/docs", "/.github", "/scripts", "/proptest-regressions"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
directories = "6"
sha2 = "0.11"
hex = "0.4.3"
humantime = "2.3.0"
anstream = "1.0.0"
anstyle = "1.0.14"
glob = "0.3.3"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.47.2", features = ["yaml"] }
tempfile = "3.27"
predicates = "3.1.4"
walkdir = "2.5"
proptest = "1.11.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
wiremock = "0.6.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bench]]
name = "cli_benchmark"
harness = false
