[package]
name = "llmenv-config"
version = "1.0.10"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
llmenv-paths = { path = "../llmenv-paths" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
thiserror = "2.0.18"

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27"
