[package]
name = "llmenv-config"
version = "1.0.10"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
llmenv-paths = { path = "../llmenv-paths", version = "1.0.10" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
