[package]
name = "llmenv-config"
version = "2.4.1"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Configuration handling for llmenv"
repository = "https://github.com/phaedrus1992/llmenv"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
llmenv-paths = { path = "../llmenv-paths", version = "2.4.1" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
