[package]
name = "llmenv-git"
version = "3.6.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Git utilities for llmenv"
repository = "https://github.com/phaedrus1992/llmenv"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
