[package]
name = "llmenv-paths"
version = "2.3.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Path resolution utilities for llmenv"
repository = "https://github.com/phaedrus1992/llmenv"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
