[package]
name = "llmenv-util"
version = "1.0.10"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
serde_json = "1.0.150"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }

[dev-dependencies]
proptest = "1.11.0"
