[package]
name = "llmenv-util"
version = "2.0.3"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Shared utilities for llmenv"
repository = "https://github.com/phaedrus1992/llmenv"

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
